feat(yell): bark template support
